<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:padding="32dp">

    <ImageView
        android:id="@+id/iv_onboarding_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_onboarding_quality"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/onboarding_image_description"
        app:layout_constraintBottom_toTopOf="@+id/tv_onboarding_title"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_onboarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/onboarding_title_3"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="@color/text_primary_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_onboarding_image"
        app:layout_constraintBottom_toTopOf="@+id/tv_onboarding_description" />

    <TextView
        android:id="@+id/tv_onboarding_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/onboarding_desc_3"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/text_secondary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_title"
        app:layout_constraintBottom_toTopOf="@+id/btn_get_started" />

    <Button
        android:id="@+id/btn_get_started"
        style="@style/CallToAction.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_description" />

</androidx.constraintlayout.widget.ConstraintLayout>
